pamc/src/tests/sample_code/should_succeed/multi_file/no_warnings/import_merging/src/export_nat_3.ph
pub use super.Nat as NicknamedNat;
