pamc/src/tests/sample_code/should_fail/parse/component_kw_in_dot_rhs/super_dot_super.ph
let x = super.super.Nat.O;
